<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutWishAdapter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_marginBottom="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_wish_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/img_wish_transaction"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                android:src="@color/grey_app" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_wishlist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/card_wish_transaction"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_wishlist_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_wishlist_name"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/card_wish_transaction"
            android:text="@string/currency_label"
            android:textColor="@color/grey_text_card"
            android:textSize="14sp"
            android:textStyle="bold" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>