<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.home.MainActivity">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_profile_main"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            app:srcCompat="@color/black" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/username"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_weight="1"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:layout_weight="1"
            android:src="@drawable/btn_wallet" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_balance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_header"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/balance"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_balance_title"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:text="@string/currency_label"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_needed_home"
        android:layout_width="160dp"
        android:layout_height="85dp"
        android:layout_below="@+id/tv_balance"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_orange_card"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/total_needed"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_total_needed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:ellipsize="end"
                android:text="@string/currency_label"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_total_deposit"
        android:layout_width="160dp"
        android:layout_height="85dp"
        android:layout_below="@+id/tv_balance"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/card_needed_home"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_green_card"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/total_deposit"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_total_deposit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:ellipsize="end"
                android:text="@string/currency_label"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_list_count_wishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/card_needed_home"
        android:layout_marginTop="24dp"
        android:text="@string/list_kepingin_main"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/card_total_deposit"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_filter_black_24"
        android:contentDescription="@string/app_name" />


    <ImageView
        android:id="@+id/bgEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/contentdesc"
        android:src="@drawable/bg_empty_wishlist"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/loadingListWishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHomeWishlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        android:layout_below="@+id/tv_list_count_wishlist"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="visible" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/contentdesc"
        android:src="@drawable/ic_add_white" />
</RelativeLayout>